--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -7,12 +7,12 @@
     tools:context="com.example.android.testing1.principal">
 
     <LinearLayout
-        android:layout_width="368dp"
+        android:layout_width="344dp"
         android:layout_height="495dp"
         android:orientation="vertical"
+        android:weightSum="1"
         tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp"
-        android:weightSum="1">
+        tools:layout_editor_absoluteY="8dp">
 
         <TextView
             android:id="@+id/textView"
@@ -20,55 +20,84 @@
             android:layout_height="wrap_content"
             android:text="@string/titulo"
             android:textAlignment="center"
+            android:textAllCaps="true"
             android:textSize="24sp"
             android:textStyle="bold" />
 
         <EditText
             android:id="@+id/txtnum1"
-            android:layout_width="match_parent"
+            android:layout_width="345dp"
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="@string/primer_numero"
-            android:inputType="number" />
+            android:inputType="number"
+            android:layout_weight="0.09" />
 
         <EditText
             android:id="@+id/txtnum2"
-            android:layout_width="match_parent"
+            android:layout_width="345dp"
             android:layout_height="wrap_content"
             android:ems="10"
             android:hint="@string/segundo_numero"
-            android:inputType="number" />
+            android:inputType="number"
+            android:layout_weight="0.16" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.09"
+            android:text="@string/opciones"
+            android:textAlignment="viewStart"
+            android:textAllCaps="false"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <Spinner
+            android:id="@+id/cmbOperaciones"
+            android:layout_width="347dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.13" />
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/resultado"
-            android:textSize="24sp"
+            android:textSize="20sp"
             android:textStyle="bold"
-            tools:text="@string/resultado" />
+            tools:text="@string/resultado"
+            android:layout_weight="0.10" />
 
         <TextView
             android:id="@+id/lblresultado"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="0.14"
             android:textAlignment="center"
             android:textSize="24sp"
-            android:textStyle="bold"
-            android:layout_weight="0.14" />
+            android:textStyle="bold" />
 
-        <Button
-            android:id="@+id/button"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="calcular"
-            android:text="@string/calcular" />
+            android:layout_height="76dp"
+            android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="limpiar"
-            android:text="@string/borrar" />
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="limpiar"
+                android:text="@string/borrar" />
+
+            <Button
+                android:id="@+id/button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="calcular"
+                android:text="@string/calcular" />
+        </LinearLayout>
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
